--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ html {
 
 .menu {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   padding: 15px 20px;
 }
 
 .link {
   margin: 0 15px;
+  display: inline-block;
 }
 
 .profile {
@@ -33,8 +34,6 @@ html {
   height: 32px;
   background-image: url('icons/favicon.png');
   background-size: contain;
-
-  /* white-space: nowrap; */
 }
 
 .popup-window {
@@ -42,34 +41,137 @@ html {
   position: absolute;
   top: 60px;
   right: 50px;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  align-content: flex-start;
-
+  box-sizing: border-box;
   width: 360px;
-  /* border: 2px solid black; */
+  max-height: 500px;
+  overflow-y: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-#popup-checkbox {
+.popup-table {
+  display: grid;
+  padding: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 100px;
+  grid-gap: 10px;
+  justify-content: start;
+  align-content: start;
+}
+
+#popup-checkbox,
+#popup-more {
   position: fixed;
   top: -300px;
 }
 
 #popup-checkbox:checked + .popup-window {
-  display: flex;
+  display: block;
 }
 
 .popup-item {
-  display: inline-block;
-  width: 33%;
-  height: 96px;
-  /* margin: 0 auto; */
+  padding: 15px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-origin: content-box;
+  border-radius: 10px;
+}
+
+.popup-item:hover,
+.popup-more-label:hover {
+  background-color: rgb(218, 232, 252);
+}
+
+.popup-more-label {
+  display: block;
+  box-sizing: border-box;
+  width: 95%;
+  text-align: center;
+  padding: 5px;
+  margin: -20px auto 10px auto;
+  background-color: rgb(226, 226, 226);
+}
+
+.popup-more-label:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+#popup-more:checked ~ .popup-more-label {
+  display: none;
+}
+
+#popup-more:checked ~ .popup-table {
+  display: grid;
+}
+
+.popup-table-more {
+  border-top: 2px solid grey;
+  margin-top: 30px;
+}
+
+.hidden {
+  display: none;
 }
 
 .asana {
   background-image: url('icons/Tilda_Icons_8yo_asana.svg');
+}
+
+.bindi {
+  background-image: url('icons/Tilda_Icons_8yo_bindi.svg');
+}
+
+.flame {
+  background-image: url('icons/Tilda_Icons_8yo_flame.svg');
+}
+
+.ganesh {
+  background-image: url('icons/Tilda_Icons_8yo_ganesh.svg');
+}
+
+.heart {
+  background-image: url('icons/Tilda_Icons_8yo_heart.svg');
+}
+
+.horn {
+  background-image: url('icons/Tilda_Icons_11mu_horn.svg');
+}
+
+.microphone {
+  background-image: url('icons/Tilda_Icons_11mu_microphone.svg');
+}
+
+.metronome {
+  background-image: url('icons/Tilda_Icons_11mu_metronome.svg');
+}
+
+.purse {
+  background-image: url('icons/Tilda_Icons_11mu_purse.svg');
+}
+
+.rock {
+  background-image: url('icons/Tilda_Icons_11mu_rock.svg');
+}
+
+.jossstick {
+  background-image: url('icons/Tilda_Icons_8yo_jossstick.svg');
+}
+
+.piano {
+  background-image: url('icons/Tilda_Icons_11mu_piano.svg');
+}
+
+.ear {
+  background-image: url('icons/Tilda_Icons_11mu_ear.svg');
+}
+
+.ohm {
+  background-image: url('icons/Tilda_Icons_8yo_ohm.svg');
+}
+
+.tree {
+  background-image: url('icons/Tilda_Icons_8yo_tree.svg');
+}
+
+.melomane {
+  background-image: url('icons/Tilda_Icons_11mu_location.svg');
 }
